# socratic

./: .copier-answers.yml  .envrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  PRODUCT.md  flake.nix  package-lock.json  package.json  process-compose.yaml  pyproject.toml
.claude/skills/commit/: SKILL.md
.github/workflows/: test.yml
.state/claude/skills/commit/: SKILL.md
config/: llm.yaml  logging.yaml  secrets.vault.yaml  storage.yaml  template.yaml  vendor.yaml  web.yaml
config/env.d/test/: storage.yaml
docs/: agent-spec.md  assessment-agent-dialogue-design.md  assessment-model.md  exam-interaction.md  flights.md
docs/sample-assignments/: english-literacy.md  history-civics.md  mathematics.md  science.md
migrations/: script.py.mako
migrations/versions/: 001_initial_schema.py  002_add_agent_states.py  003_make_password_hash_non_nullable.py  004_rubric_proficiency_levels.py  005_drop_rubric_criteria_weight.py  006_migrate_timestamp_columns_to_timestamptz.py  007_add_word_timings_and_video_url.py  008_make_started_at_not_null.py  009_add_flights.py  010_add_template_content_hash.py  011_drop_flights_rendered_content.py  012_add_survey_schema_versioning.py  2026-01-19-add_evidence_indicators_and_failure_-41471731a861.py
socratic/: __init__.py
socratic/auth/: __init__.py  jwt.py  local.py  middleware.py  provider.py
socratic/cli/: __main__.py  agent.py  data.py  example.py  schema.py  user.py  web.py
socratic/cli/script/: __init__.py  demo_flights.py  setup_assessment_survey.py  test_assessment_streaming.py  test_criteria_coverage.py  test_livekit_session.py
socratic/core/: __init__.py  di.py  logging.py  provider.py
socratic/core/config/: __init__.py  base.py  llm.py  logging.py  secrets.py  settings.py  source.py  storage.py  template.py  vendor.py  web.py
socratic/core/container/: __init__.py  auth.py  llm.py  socratic.py  storage.py  streaming.py  streams.py  template.py  vendor.py
socratic/lib/: __init__.py  cli.py  debug.py  json.py  sentinel.py  sheets.py  util.py  uuid.py
socratic/lib/logging/: __init__.py  extra.py  json.py  style.py
socratic/lib/sql/: __init__.py  enum.py  extension.py  session.py  util.py
socratic/livekit/: __init__.py  egress.py  room.py
socratic/llm/: __init__.py  config.py  factory.py  provider.py  speech.py  tokens.py  transcription.py
socratic/llm/agent/: __init__.py  base.py  state.py
socratic/llm/agent/assessment/: __init__.py  agent.py  farewell.py  state.py  status.py  tools.py
socratic/llm/assessment/: __init__.py  checkpointer.py  edges.py  errors.py  graph.py  nodes.py  runner.py  state.py
socratic/llm/evaluation/: __init__.py  evidence.py  feedback.py  flagger.py  grader.py  pipeline.py
socratic/llm/livekit/: __init__.py  agent.py  event.py  server.py
socratic/llm/prompts/agent/: assessment_example_anti_validation.j2  assessment_example_depth.j2  assessment_example_probing.j2  assessment_example_transitions.j2  assessment_status.j2  assessment_system.j2
socratic/llm/prompts/assessment/: analyze_completion.j2  analyze_coverage.j2  analyze_response.j2  closure.j2  extension.j2  orientation.j2  primary_prompt.j2  probing.j2  system.j2
socratic/llm/prompts/evaluation/: detect_flags.j2  extract_evidence.j2  generate_feedback.j2  grade_criteria.j2
socratic/model/: __init__.py  assignment.py  attempt.py  base.py  enum.py  evaluation.py  example.py  flight.py  id.py  objective.py  organization.py  override.py  rubric.py  strand.py  transcript.py  user.py
socratic/storage/: __init__.py  agent_state.py  assignment.py  attempt.py  evaluation.py  example.py  flight.py  objective.py  organization.py  override.py  rubric.py  strand.py  table.py  transcript.py  type.py  user.py
socratic/storage/object/: __init__.py  store.py
socratic/storage/streaming/: __init__.py  broker.py
socratic/streaming/: memory.py  redis.py
socratic/typings/ansible/parsing/vault/: __init__.pyi
socratic/typings/dependency_injector/: containers.pyi  providers.pyi
socratic/typings/dependency_injector/ext/: aiohttp.pyi  flask.pyi
socratic/typings/keyctl/: __init__.pyi  key.pyi
socratic/typings/xdg_base_dirs/: __init__.pyi
socratic/web/example/: __init__.py  main.py
socratic/web/example/frontend/: openapi-ts.config.ts  package.json
socratic/web/example/frontend/src/: App.tsx
socratic/web/example/route/: __init__.py  example.py
socratic/web/example/view/: __init__.py  example.py
socratic/web/flights/: __init__.py  main.py
socratic/web/flights/route/: __init__.py  flight.py  survey.py  template.py
socratic/web/flights/view/: __init__.py  flight.py  survey.py  template.py
socratic/web/learner/frontend/: index.html  package-lock.json  package.json  vite.config.ts
socratic/web/learner/frontend/src/: App.tsx  auth.ts  main.tsx
socratic/web/socratic/: __init__.py  dependencies.py  main.py
socratic/web/socratic/frontend/: .gitignore  eslint.config.js  index.html  openapi-ts.config.ts  openapi-ts.flights.config.ts  package-lock.json  package.json  vite.config.ts
socratic/web/socratic/frontend/src/: App.tsx  api.ts  auth.ts  main.tsx  router.tsx
socratic/web/socratic/route/: __init__.py  assessment.py  assignment.py  auth.py  learner.py  livekit.py  objective.py  organization.py  review.py  speech.py  strand.py  transcription.py
socratic/web/socratic/view/: __init__.py  assessment.py  assignment.py  auth.py  livekit.py  objective.py  organization.py  review.py  speech.py  strand.py  transcript.py  transcription.py
tests/: __init__.py  conftest.py  test_assignment_api.py  test_auth_api.py  test_flights.py  test_flights_api.py  test_learner_attempts_api.py  test_organization_api.py  test_timezone_handling.py  test_transcription.py
tests/llm/: conftest.py  test_assessment_agent_state.py  test_assessment_state.py  test_completion_detection.py
tests/storage/: test_agent_state.py  test_assignment.py  test_attempt.py  test_evaluation.py  test_flight.py  test_objective.py  test_organization.py  test_override.py  test_rubric.py  test_strand.py  test_transcript.py  test_user.py
(+88 files in other folders)
