[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "Socratic"
description = "..."
dynamic = [ "version" ]
requires-python = ">=3.13,<3.14"
authors = [
    {name = "Jesse Dhillon", email = "jesse@dhillon.com" },
]
dependencies = [
    "alembic~=1.14.0",
    "ansible~=11.1.0",
    "bcrypt~=4.2.0",
    "click~=8.1.0",
    "colorlog~=6.9.0",
    "dependency-injector~=4.45.0",
    "fastapi~=0.115.0",
    "langchain~=1.0",
    "langchain-openai~=1.0",
    "langchain-anthropic~=1.0",
    "langgraph~=1.0",
    "livekit-api~=1.1.0",
    "livekit-agents~=1.3.0",
    "livekit-plugins-deepgram~=1.3.0",
    "livekit-plugins-elevenlabs~=1.3.0",
    "livekit-plugins-openai~=1.3.0",
    "livekit-plugins-silero~=1.3.0",
    "keyctl~=0.5.0",
    "psycopg[binary]~=3.2.0",
    "redis~=5.2.0",
    "pydantic[email]~=2.10.0",
    "pydantic-settings~=2.7.0",
    "pygments~=2.18.0",
    "PyJWT~=2.10.0",
    "shortuuid~=1.0.13",
    "setuptools~=75.8.0",
    "sse-starlette~=2.0.0",
    "types-Pygments==2.19.0.20250107",
    "uuid-utils~=0.14",
    "uvicorn~=0.34.0",
    "xdg-base-dirs~=6.0.0",
    "python-multipart (>=0.0.21,<0.0.22)",
    "postgres-mcp[dev] (>=0.3.0,<0.4.0)",
]

[project.optional-dependencies]
test = [
    "numpy~=2.2.0",
    "pytest~=8.3.0",
    "sql_formatter~=0.6.0",
]
dev = [
    "jdbpp@git+ssh://git@github.com/jessedhillon/jdbpp.git@14ade861a42be37536cc2612d028a2ae2dc589c8",
    "google-api-python-client~=2.163.0",
    "google-api-python-client-stubs~=1.29.0",
    "isort~=6.0.0",
    "pyright~=1.1.0",
    "rpdb@git+ssh://git@github.com/incognita-labs/rpdb.git@v0.2.1",
    "ruff~=0.11.0",
    "watchfiles~=1.0.0",
]

[project.scripts]
socratic-cli = "socratic.cli.__main__:execute_command"

[tool.setuptools]
packages = [ "socratic" ]

[tool.setuptools.dynamic]
version.attr = "socratic.__version__"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--strict-markers -svx --pdbcls=jdbpp:Pdb"
filterwarnings = [
  "ignore:.*type_params.*ForwardRef._evaluate.*:DeprecationWarning:pydantic\\.v1\\.typing",
  "ignore::DeprecationWarning:httplib2\\.auth",
]

[tool.pyright]
exclude = [
  "socratic/typings/",
  "**/node_modules/**",
  "**/.venv/**",
]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
stubPath = "socratic/typings/"

reportUnusedImport = false  # let ruff catch this
reportUnusedVariable = false  # let ruff catch this

# WARN: these would nice to have, but require better typings for dependency-injector (or lots of silencing)
reportUnknownParameterType = true
reportUnknownArgumentType = true
reportUnknownLambdaType = true
reportUnknownVariableType = true
reportUnknownMemberType = false
reportMissingTypeStubs = false

[tool.ruff]
exclude = [
  ".venv",
  "socratic/typings/"
]
line-length = 120
lint.select = [ "E", "F", "B", "T" ]
lint.extend-ignore = [
    "I",
    "B008"  # calling function in parameter list
]
preview = true
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
"socratic/model/id.py" = ["E302"]

[tool.black]
line-length = 120
target-version = ["py313"]
force-exclude = 'socratic/typings/*'
skip-string-normalization = true

[tool.isort]
line_length = 120
multi_line_output = 2  # HANGING_INDENT
skip_glob = [
    "socratic/typings/**/*.pyi"
]

[tool.poetry]
name = "Socratic"
version = "0.0.0"  # placeholder, read from VERSION.txt by poetry-dynamic-versioning
packages = [{ include = "socratic" }]

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry-dynamic-versioning.from-file]
source = "VERSION.txt"

[dependency-groups]
dev = [
    "rich (>=14.2.0,<15.0.0)"
]
